<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegistrationFragment">

    <data>
        <variable name="viewModel" type="org.mirgar.android.cryptoelection.viewmodel.RegistrationViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@={viewModel.name}"
            app:error="@{viewModel.nameError}"
            android:hint="@string/name"
            android:autofillHints="username,personName"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@={viewModel.email}"
            app:error="@{viewModel.emailError}"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@={viewModel.phoneNumber}"
            app:error="@{viewModel.phoneNumberError}"
            android:hint="@string/phone_number"
            android:autofillHints="telephone"
            android:inputType="phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/residence" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/pass_code"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.passCode}"
            app:error="@{viewModel.passCodeError}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:text="@string/sign_up"
            android:onClick="@{() -> viewModel.register()}" />

    </LinearLayout>
</layout>